// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`hMR - Vite Platform > should enable hmr for vite serve transforms 1`] = `
"import { hmrAccept as __$hmrAccept$__ } from "virtual:essor-hmr";
import { createHMRComponent as __$createHMRComponent$__ } from "virtual:essor-hmr";
import { template as _template$, child as _child$, next as _next$, createComponent as _createComponent$, insert as _insert$ } from "essor";
const _t$3 = _template$("<div><!><!>");
const _t$2 = _template$("<div>Bar");
const _t$ = _template$("<div>Foo");
import { createApp } from "essor";
function Foo() {
  return _t$();
}
Foo.__signature = "1lygndc";
Foo.__hmrId = "me1pwu:Foo";
function Bar() {
  return _t$2();
}
Bar.__signature = "u5b22v";
Bar.__hmrId = "me1pwu:Bar";
function App() {
  return (() => {
    const _root$ = _t$3();
    const _n$ = _child$(_root$);
    const _n$2 = _next$(_n$, 1);
    _insert$(_root$, __$createHMRComponent$__(Foo, {}), _n$);
    _insert$(_root$, __$createHMRComponent$__(Bar, {}), _n$2);
    return _root$;
  })();
}
App.__signature = "uvdrlt";
App.__hmrId = "me1pwu:App";
const _app = createApp(__$createHMRComponent$__(App), "#root");
const __$registry$__ = [Foo, Bar, App];
if (import.meta.hot) {
  import.meta.hot.dispose(() => _app?.unmount?.());
  import.meta.hot.accept();
  __$hmrAccept$__("vite", import.meta.hot, __$registry$__);
}"
`;

exports[`hMR - Vite Platform > should enable hmr for vite serve transforms 2`] = `
"import { hmrAccept as __$hmrAccept$__ } from "virtual:essor-hmr";
import { createHMRComponent as __$createHMRComponent$__ } from "virtual:essor-hmr";
import { template as _template$, child as _child$, next as _next$, createComponent as _createComponent$, insert as _insert$ } from "essor";
const _t$3 = _template$("<div><!><!>");
const _t$2 = _template$("<div>B");
const _t$ = _template$("<div>A");
import { createApp } from 'essor';
export function ComponentA() {
  return _t$();
}
ComponentA.__signature = "yeg9zu";
ComponentA.__hmrId = "ydmpkz:ComponentA";
export const ComponentB = () => _t$2();
ComponentB.__signature = "1vo7hf2";
ComponentB.__hmrId = "ydmpkz:ComponentB";
export default function App() {
  return (() => {
    const _root$ = _t$3();
    const _n$ = _child$(_root$);
    const _n$2 = _next$(_n$, 1);
    _insert$(_root$, __$createHMRComponent$__(ComponentA, {}), _n$);
    _insert$(_root$, __$createHMRComponent$__(ComponentB, {}), _n$2);
    return _root$;
  })();
}
App.__signature = "1q4priw";
App.__hmrId = "ydmpkz:App";
const _app = createApp(__$createHMRComponent$__(App), '#root');
const __$registry$__ = [ComponentA, ComponentB, App];
if (import.meta.hot) {
  import.meta.hot.dispose(() => _app?.unmount?.());
  import.meta.hot.accept();
  __$hmrAccept$__("vite", import.meta.hot, __$registry$__);
}"
`;

exports[`hMR - Vite Platform > should enable hmr for vite serve transforms 3`] = `
"import { hmrAccept as __$hmrAccept$__ } from "virtual:essor-hmr";
import { createHMRComponent as __$createHMRComponent$__ } from "virtual:essor-hmr";
import { template as _template$, nthChild as _nthChild$, insert as _insert$, createComponent as _createComponent$ } from "essor";
const _t$ = _template$("<div>Hello <!>");
import { createApp } from 'essor';
function PropsComponent(props: {
  name: string;
}) {
  return (() => {
    const _root$ = _t$();
    const _n$ = _nthChild$(_root$, 1);
    _insert$(_root$, () => props.name, _n$);
    return _root$;
  })();
}
PropsComponent.__signature = "kth069";
PropsComponent.__hmrId = "1dblsze:PropsComponent";
const _app = createApp(__$createHMRComponent$__(() => __$createHMRComponent$__(PropsComponent, {
  name: "World"
})), '#root');
const __$registry$__ = [PropsComponent];
if (import.meta.hot) {
  import.meta.hot.dispose(() => _app?.unmount?.());
  import.meta.hot.accept();
  __$hmrAccept$__("vite", import.meta.hot, __$registry$__);
}"
`;

exports[`hMR - Vite Platform > should enable hmr for vite serve transforms 4`] = `
"import { hmrAccept as __$hmrAccept$__ } from "virtual:essor-hmr";
import { createHMRComponent as __$createHMRComponent$__ } from "virtual:essor-hmr";
import { template as _template$, nthChild as _nthChild$, insert as _insert$, delegateEvents as _delegateEvents$ } from "essor";
const _t$ = _template$("<div>Count: <!>");
import { createApp, signal } from 'essor';
function SignalComponent() {
  const count = signal(0);
  return (() => {
    const _root$ = _t$();
    const _n$ = _nthChild$(_root$, 1);
    _root$["_$click"] = () => count.value++;
    _insert$(_root$, () => count.value, _n$);
    return _root$;
  })();
}
SignalComponent.__signature = "182rwo7";
SignalComponent.__hmrId = "1xegm1l:SignalComponent";
const _app = createApp(__$createHMRComponent$__(SignalComponent), '#root');
const __$registry$__ = [SignalComponent];
_delegateEvents$(["click"]);
if (import.meta.hot) {
  import.meta.hot.dispose(() => _app?.unmount?.());
  import.meta.hot.accept();
  __$hmrAccept$__("vite", import.meta.hot, __$registry$__);
}"
`;
